# ProbabilisticLibrary

./: .editorconfig  .gitignore  .sonarcloud.properties  CMakeLists.txt  CONTRIBUTING.md  cmake.bat  readme.md  sigrid.yaml  sonar-project.properties
sources/: CMakeLists.txt  Dockerfile  NuGet.Config  ProbabilisticLibrary.sln  cmake.bat  version_number.ini
sources/Deltares.Probabilistic.CWrapper/: CMakeLists.txt  Deltares.Probabilistic.CWrapper.vcxproj  ExportedMethods.cpp  MessageHandler.cpp  basicSettings.h  calcdistributions.cpp  combin.cpp  convert.cpp  createDistribution.cpp  createDistribution.h  createReliabilityMethod.cpp  createReliabilityMethod.h  enumDistributions.h  funcWrapper.cpp  funcWrapper.h  probCalcF2C.cpp  progressWrapper.cpp  progressWrapper.h  randomgen.cpp  stringHelper.cpp  stringHelper.h
sources/Deltares.Probabilistic.FortranWrapper/: CMakeLists.txt
sources/Deltares.Probabilistic.FortranWrapper.Test/: CMakeLists.txt  ftn_interface_tests.f90  ftn_unit_tests.f90
sources/Deltares.Probabilistic.Interface/: CMakeLists.txt  distributions.cs  probCalc.cs
sources/Deltares.Probabilistic.Net/: CMakeLists.txt  Deltares.Probabilistic.Net.filters  Deltares.Probabilistic.Net.vcxproj  Deltares.probabilistic.Net.nuspec
sources/Deltares.Probabilistic.Net.Test/: Deltares.Probabilistic.Net.Test.csproj  ProjectBuilder.cs  TestAdaptiveImportanceSampling.cs  TestCobylaReliability.cs  TestConditional.cs  TestCorrelationMatrix.cs  TestCrudeMonteCarlo.cs  TestCrudeMonteCarloUncertainty.cs  TestDirectionalSampling.cs  TestDirectionalSamplingCombiner.cs  TestDirectionalSamplingThenFORM.cs  TestDistributions.cs  TestFORM.cs  TestFORMthenDirectionalSampling.cs  TestImportanceSampling.cs  TestImportanceSamplingCombiner.cs  TestImportanceSamplingUncertainty.cs  TestLatinHypercube.cs  TestNumericalBisection.cs  TestNumericalIntegration.cs  TestObjectFactory.cs  TestObjectProperties.cs  TestRunProject.cs  TestSingleVariationSensitivity.cs  TestSobolSensitivity.cs  TestStandardNormal.cs  TestSubsetSimulation.cs  ZFunctionOutput.cs
sources/Deltares.Probabilistic.NetCS/: Deltares.Probabilistic.NetCS.csproj  Deltares.Probabilistic.NetCS.nuspec
sources/Deltares.Probabilistic.Nuget.Test/: Deltares.Probabilistic.Nuget.Test.csproj  TestReliability.cs  TestSensitivity.cs  TestStatistics.cs  packages.config
sources/Deltares.Probabilistic.PWrapper/: Deltares.Probabilistic.PWrapper.pyproj  README.md  create_wheel.bat  generate-documentation.bat  generate_docs.bat  generate_docs_sphinx.bat  install_wheel.bat  interface.py  model.py  project.py  pyproject.toml  readme.md  readme.txt  reliability.py  setup.py  setup_linux.py  statistic.py  statistics.py  stochast.py  uninstall_wheel.bat  update_wheel.bat  utils.py
sources/Deltares.Probabilistic.PWrapper.Examples/: linear.py
sources/Deltares.Probabilistic.PWrapper.Notebooks/: FORM_simple_correlations.ipynb  NI_fragility_curve.ipynb  bligh.ipynb  composite_distribution.ipynb  conditional_variable.ipynb  conversion_functions.ipynb  copulas.ipynb  correlations.ipynb  distribution_functions.ipynb  failure_probability_fragility_curve.ipynb  fault_tree.ipynb  fitting_with_prior_distribution.ipynb  hunt.ipynb  hybrid_reliability_methods.ipynb  install_jupyter.bat  length_effect.ipynb  limit_state_function_with_arrays.ipynb  operations_on_distribution_functions.ipynb  overview_distribution_functions.ipynb  parallel_overtopping.ipynb  parallel_process_overtopping.py  reliability_analysis_system.ipynb  reliability_methods_bligh.ipynb  reliability_methods_hunt.ipynb  reliability_methods_overtopping.ipynb  reliability_methods_overtopping_TAW.ipynb  reliability_piping.ipynb  reliability_with_piping_model.ipynb  run-linear.ipynb  run_all_nb.sh  run_model.ipynb  safety_levels.ipynb  sensitivity_analysis.ipynb  statistical_uncertainty.ipynb  uncertainty_analysis.ipynb  validation.ipynb  visualize_results.ipynb  zfunc_with_arrays.ipynb
sources/Deltares.Probabilistic.PWrapper.Test/: Deltares.Probabilistic.PWrapper.Test.pyproj  project_builder.py  test_combine.py  test_length_effect.py  test_model.py  test_reliability.py  test_run_project.py  test_sensitivity.py  test_statistics.py  test_stochast.py  test_uncertainty.py  test_utils.py
sources/Deltares.Probabilistic.Python/: Deltares.Probabilistic.Python.pyproj  create_wheel.bat  install_at_pypi.md  install_wheel.bat  pyproject.toml  readme.md  readme.txt  setup.py  uninstall_wheel.bat  update_wheel.bat
sources/Deltares.Probabilistic.Python.Notebooks/: composite_distribution.ipynb  conversion_functions.ipynb  correlations.ipynb  hybrid_reliability_methods.ipynb  limit_state_function_with_arrays.ipynb  operations_on_distribution_functions.ipynb  reliability_analysis_system.ipynb  sensitivity_analysis.ipynb  statistical_uncertainty.ipynb
sources/Deltares.Probabilistic.Python.Test/: Deltares.Probabilistic.Python.Test.pyproj  project_builder.py  test_combine.py  test_reliability.py  test_run_project.py  test_sensitivity.py  test_statistics.py  test_uncertainty.py  test_utils.py
sources/Deltares.Probabilistic.Test/: CMakeLists.txt  Deltares.Probabilistic.Test.vcxproj  Test_RhoLimit.tek  pch.cpp  pch.h  projectBuilder.cpp  projectBuilder.h  projectBuilder_body.cpp  unittests.cpp  unittests_body.cpp
sources/Deltares.Probabilistic.Wrapper.Test/: Deltares.Probabilistic.Wrapper.Test.csproj  ProjectBuilder.cs  TestAdaptiveImportanceSampling.cs  TestCobylaReliability.cs  TestConditional.cs  TestCorrelationMatrix.cs  TestCrudeMonteCarlo.cs  TestCrudeMonteCarloSensitivity.cs  TestCrudeMonteCarloUncertainty.cs  TestDirectionalSampling.cs  TestDirectionalSamplingCombiner.cs  TestDirectionalSamplingThenFORM.cs  TestDistributions.cs  TestFORM.cs  TestFORMthenDirectionalSampling.cs  TestImportanceSampling.cs  TestImportanceSamplingCombiner.cs  TestImportanceSamplingSensitivity.cs  TestImportanceSamplingUncertainty.cs  TestLatinHypercube.cs  (+6 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests2/: CMakeLists.txt  Program.cs  RunDirectionalSamplingTests.cs  RunDistributionsTests.cs  RunMonteCarloTests.cs
(+2067 files in other folders)
