[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic_library"
dynamic = ["version"]
readme = "readme.md"
description = "Package which provides probabilistic methods"
license = {text = "LGPL-3.0"}
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib"]
authors = [
    { name = "Deltares", email = "d-prob-community@deltares.nl" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://deltares.github.io/ProbabilisticLibrary/"
Documentation = "https://github.com/Deltares/ProbabilisticLibrary/tree/master/doc"
Repository = "https://github.com/Deltares/ProbabilisticLibrary"
issues = "https://github.com/Deltares/ProbabilisticLibrary/issues"

